--- a/7.1/fpm/alpine/Dockerfile
+++ b/7.1/fpm/alpine/Dockerfile
@@ -76,10 +76,10 @@ RUN set -xe; \
 	if [ -n "$PHP_ASC_URL" ]; then \
 		wget -O php.tar.xz.asc "$PHP_ASC_URL"; \
 		export GNUPGHOME="$(mktemp -d)"; \
-		for key in $GPG_KEYS; do \
-			gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; \
-		done; \
-		gpg --batch --verify php.tar.xz.asc php.tar.xz; \
+		#for key in $GPG_KEYS; do \
+		#	gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; \
+		#done; \
+		#gpg --batch --verify php.tar.xz.asc php.tar.xz; \
 		rm -r "$GNUPGHOME"; \
 	fi; \
 	\
@@ -118,6 +118,7 @@ RUN set -xe \
 		--with-libedit \
 		--with-openssl \
 		--with-zlib \
+		--with-mhash \
 		\
 		$PHP_EXTRA_CONFIGURE_ARGS \
 	&& make -j "$(getconf _NPROCESSORS_ONLN)" \
